[package]
name = "axmax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.4"
aws-sdk-cloudwatch = "1.40.0"
crc16 = "0.4.0"
env_logger = "0.11.3"
hex = "0.4.3"
log = "0.4.22"
serialport = "4.5.0"
tokio = { version = "1.38.0", features = ["full"] }
